--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,11 @@
+AllCops:
+  Include:
+    - 'lib/**/*.rb'
+    - 'test/**/*.rb'
+  Exclude:
+    - 'Rakefile'
+    - '*.gemspec'
+
 AndOr:
   Enabled: false
 
