--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,8 +9,27 @@ AllCops:
 AndOr:
   Enabled: false
 
-Style/StringLiterals:
+Layout/IndentHeredoc:
+  Enabled: false
+
+Layout/SpaceAroundEqualsInParameterDefault:
+  Enabled: false
+
+Layout/ClosingHeredocIndentation:
   Enabled: false
 
 Naming/FileName:
   Enabled: false
+
+Metrics:
+  Enabled: false
+
+Style/StringLiterals:
+  Enabled: false
+
+Style/Documentation:
+  Enabled: false
+
+Style/WordArray:
+  Enabled: false
+
